--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     
+    <div id="start">
+
+        <div id="pontos" align="right"></div>
+    </div>
     <div class="game-board">
 
         <img src="imagens/clouds.png" class="nuvens">
